--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ jobs:
   build: 
    runs-on: ubuntu-latest
    steps: 
-  - uses: actions/checkout@v3
+- uses:actions/checkout@v3
   - name: Setup ruby
     uses: ruby/setup-ruby@v1
     with: 
@@ -15,8 +15,20 @@ jobs:
     with: 
       chrome-version: stable
 
+  - name: Chromedriver Install
+    run: |
+      wget "https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip"
+      unzip chromedriver_linux64.zip 
+      sudo mv chromedriver /usr/bin/
+
   - name: Bundle Insalll
     run: bundle insatll
 
   - name: Run Cucumber Test
-    run: bundle exec cucumber
+    run: | 
+      chrome --version
+      chromedriver --version
+
+      HEADLESS=true bundle exec cucumbera
+
+  
