--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,24 +13,20 @@ jobs:
     - name: Chrome Install
       uses: browser-actions/setup-chrome@latest
       with:
-        chrome-version: latest # Menggunakan versi Chrome terbaru yang tersedia di GitHub Actions
+        chrome-version: stable
 
-    - name: Get Chromedriver Version
+    - name: Chromedriver Install
       run: |
-        LATEST_CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE")
-        echo "Latest Chromedriver Version: $LATEST_CHROMEDRIVER_VERSION"
-
-    - name: Install Chromedriver
-      run: |
-        wget "https://chromedriver.storage.googleapis.com/$LATEST_CHROMEDRIVER_VERSION/chromedriver_linux64.zip"
+        wget "https://chromedriver.storage.googleapis.com/104.0.5112.79/chromedriver_linux64.zip"
         unzip chromedriver_linux64.zip
         sudo mv chromedriver /usr/bin/
-        chromedriver --version
 
     - name: Bundle Install
       run: bundle install
 
     - name: Run Cucumber Test
       run: |
-        google-chrome --version
+        chrome --version
+        chromedriver --version
+        
         HEADLESS=true bundle exec cucumber
