--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -11,9 +11,9 @@ jobs:
         ruby-version: 3.1.4
 
     - name: Chrome Install
-      uses: browser-actions/setup-chrome@114.0.5735.133
+      uses: browser-actions/setup-chrome@latest
       with:
-        chrome-version: 114.0.5735.133
+        google-chrome-version: 114.0.5735.133
 
     - name: Chromedriver Install
       run: |
