--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Chrome Install
       uses: browser-actions/setup-chrome@latest
       with:
-        google-chrome-version: 114.0.5735.133
+        chrome-version: 114.0.5735.133
 
     - name: Chromedriver Install
       run: |
@@ -26,7 +26,7 @@ jobs:
 
     - name: Run Cucumber Test
       run: |
-        google-chrome --version
+        chrome --version
         chromedriver --version
         
         HEADLESS=true bundle exec cucumber
